--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "dotenv>=0.9.9",
+    "httpx>=0.28.1",
     "numpy>=2.3.2",
     "requests>=2.32.4",
     "sounddevice>=0.5.2",
